{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 153,
  "lineage": "ae8b15ff-563f-7ead-1ed8-d4cf20db0c84",
  "resources": [
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "three_tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
            "arn_suffix": "targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
            "load_balancing_algorithm_type": "round_robin",
            "name": "three-tier-lb-tg-0d8",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-042811f46b9962193"
          }
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "three_tier_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:loadbalancer/app/three-tier-loadbalancer/9b28af7f0ebb6581",
            "arn_suffix": "app/three-tier-loadbalancer/9b28af7f0ebb6581",
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-loadbalancer-170466077.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:loadbalancer/app/three-tier-loadbalancer/9b28af7f0ebb6581",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b44105c8c49890bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02802b4a006ecbbaf"
              },
              {
                "subnet_id": "subnet-0c606e02e061a0670"
              }
            ],
            "subnets": [
              "subnet-02802b4a006ecbbaf",
              "subnet-0c606e02e061a0670"
            ],
            "vpc_id": "vpc-042811f46b9962193",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.compute.aws_autoscaling_group.three_tier_app",
            "module.compute.aws_launch_template.three_tier_app",
            "module.compute.data.aws_lb_target_group.three_tier_tg",
            "module.compute.data.aws_ssm_parameter.three-tier-ami",
            "module.loadbalancing.aws_lb_target_group.three_tier_tg",
            "module.networking.aws_security_group.three_tier_bastion_sg",
            "module.networking.aws_security_group.three_tier_frontend_app_sg",
            "module.networking.aws_security_group.three_tier_lb_sg",
            "module.networking.aws_subnet.three_tier_private_subnets",
            "module.networking.aws_subnet.three_tier_public_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three_tier_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:listener/app/three-tier-loadbalancer/9b28af7f0ebb6581/4386af76106282fd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:listener/app/three-tier-loadbalancer/9b28af7f0ebb6581/4386af76106282fd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:loadbalancer/app/three-tier-loadbalancer/9b28af7f0ebb6581",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_autoscaling_group.three_tier_app",
            "module.compute.aws_launch_template.three_tier_app",
            "module.compute.data.aws_lb_target_group.three_tier_tg",
            "module.compute.data.aws_ssm_parameter.three-tier-ami",
            "module.loadbalancing.aws_lb.three_tier_lb",
            "module.loadbalancing.aws_lb_target_group.three_tier_tg",
            "module.networking.aws_security_group.three_tier_bastion_sg",
            "module.networking.aws_security_group.three_tier_frontend_app_sg",
            "module.networking.aws_security_group.three_tier_lb_sg",
            "module.networking.aws_subnet.three_tier_private_subnets",
            "module.networking.aws_subnet.three_tier_public_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three_tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
            "arn_suffix": "targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:736750855543:targetgroup/three-tier-lb-tg-0d8/951ff31f099f0294",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "three-tier-lb-tg-0d8",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "three_tier_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0065b6c6a0efc69be",
            "association_id": "eipassoc-0d6cb28e95c737156",
            "domain": "vpc",
            "id": "eipalloc-0065b6c6a0efc69be",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0058c58ffcce70fcd",
            "private_dns": "ip-10-123-11-110.eu-west-2.compute.internal",
            "private_ip": "10.123.11.110",
            "public_dns": "ec2-35-179-72-225.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.179.72.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three_tier_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:internet-gateway/igw-0588c44655d0b9086",
            "id": "igw-0588c44655d0b9086",
            "owner_id": "736750855543",
            "tags": {
              "Name": "three_tier_igw"
            },
            "tags_all": {
              "Name": "three_tier_igw"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three_tier_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0065b6c6a0efc69be",
            "connectivity_type": "public",
            "id": "nat-02cbbddd34ff9ad81",
            "network_interface_id": "eni-0058c58ffcce70fcd",
            "private_ip": "10.123.11.110",
            "public_ip": "35.179.72.225",
            "subnet_id": "subnet-0c606e02e061a0670"
          },
          "dependencies": [
            "module.networking.aws_eip.three_tier_nat_eip",
            "module.networking.aws_subnet.three_tier_public_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fcaad7a0dc3fe5651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02cbbddd34ff9ad81",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcaad7a0dc3fe565",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.three_tier_nat_eip",
            "module.networking.aws_nat_gateway.three_tier_ngw",
            "module.networking.aws_route_table.three_tier_private_rt",
            "module.networking.aws_subnet.three_tier_public_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0588c44655d0b9086",
            "id": "r-rtb-0b4467c36adf10c4e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4467c36adf10c4e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.three_tier_internet_gateway",
            "module.networking.aws_route_table.three_tier_public_rt",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:route-table/rtb-0fcaad7a0dc3fe565",
            "id": "rtb-0fcaad7a0dc3fe565",
            "owner_id": "736750855543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02cbbddd34ff9ad81",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three_tier_private"
            },
            "tags_all": {
              "Name": "three_tier_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:route-table/rtb-0b4467c36adf10c4e",
            "id": "rtb-0b4467c36adf10c4e",
            "owner_id": "736750855543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0588c44655d0b9086",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three_tier_public"
            },
            "tags_all": {
              "Name": "three_tier_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aad715da2b08e50",
            "route_table_id": "rtb-0fcaad7a0dc3fe565",
            "subnet_id": "subnet-0ab414eff41100aac"
          },
          "dependencies": [
            "module.networking.aws_route_table.three_tier_private_rt",
            "module.networking.aws_subnet.three_tier_private_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad364235398285d",
            "route_table_id": "rtb-0fcaad7a0dc3fe565",
            "subnet_id": "subnet-08898f9364d9dd423"
          },
          "dependencies": [
            "module.networking.aws_route_table.three_tier_private_rt",
            "module.networking.aws_subnet.three_tier_private_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0844841c73a48522c",
            "route_table_id": "rtb-0b4467c36adf10c4e",
            "subnet_id": "subnet-02802b4a006ecbbaf"
          },
          "dependencies": [
            "module.networking.aws_route_table.three_tier_public_rt",
            "module.networking.aws_subnet.three_tier_public_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f53922719b5a7292",
            "route_table_id": "rtb-0b4467c36adf10c4e",
            "subnet_id": "subnet-0c606e02e061a0670"
          },
          "dependencies": [
            "module.networking.aws_route_table.three_tier_public_rt",
            "module.networking.aws_subnet.three_tier_public_subnets",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_backend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-0042ec163d83af66c",
            "description": "Allow SSH inbound traffic from Bastion and HTTP inbound traffic from frontend app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0042ec163d83af66c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0847f90fe12433981"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0c5a31762187bac"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_backend_sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.three_tier_bastion_sg",
            "module.networking.aws_security_group.three_tier_frontend_app_sg",
            "module.networking.aws_security_group.three_tier_lb_sg",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-0847f90fe12433981",
            "description": "Allow SSH inbound traffic from Set IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0847f90fe12433981",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "three_tier_bastion_sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_frontend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-0b0c5a31762187bac",
            "description": "Allow SSH inbound traffic from Bastion and HTTP inbound traffic from LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0c5a31762187bac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0847f90fe12433981"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b44105c8c49890bb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_frontend_sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.three_tier_bastion_sg",
            "module.networking.aws_security_group.three_tier_lb_sg",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-0b44105c8c49890bb",
            "description": "Allow inbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b44105c8c49890bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_lb_sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-05fc2c8e7e229729c",
            "description": "Allow MySql port inbound traffic from backend app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fc2c8e7e229729c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0042ec163d83af66c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "three_tier_rds_sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042811f46b9962193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.three_tier_backend_app_sg",
            "module.networking.aws_security_group.three_tier_bastion_sg",
            "module.networking.aws_security_group.three_tier_frontend_app_sg",
            "module.networking.aws_security_group.three_tier_lb_sg",
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-0ab414eff41100aac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab414eff41100aac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_1"
            },
            "tags_all": {
              "Name": "three_tier_private_1"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-08898f9364d9dd423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08898f9364d9dd423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_2"
            },
            "tags_all": {
              "Name": "three_tier_private_2"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_private_subnets_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-0fbd8625d6e198413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbd8625d6e198413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_db1"
            },
            "tags_all": {
              "Name": "three_tier_private_db1"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-0ed37f11c62b19921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.41.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed37f11c62b19921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_db2"
            },
            "tags_all": {
              "Name": "three_tier_private_db2"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-02802b4a006ecbbaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02802b4a006ecbbaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_1"
            },
            "tags_all": {
              "Name": "three_tier_public_1"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-0c606e02e061a0670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c606e02e061a0670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_2"
            },
            "tags_all": {
              "Name": "three_tier_public_2"
            },
            "vpc_id": "vpc-042811f46b9962193"
          },
          "dependencies": [
            "module.networking.aws_vpc.three_tier_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:vpc/vpc-042811f46b9962193",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0263f592a1026efc6",
            "default_route_table_id": "rtb-059ec3a8fdbbf1731",
            "default_security_group_id": "sg-016dab63114373231",
            "dhcp_options_id": "dopt-4562542d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042811f46b9962193",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059ec3a8fdbbf1731",
            "owner_id": "736750855543",
            "tags": {
              "Name": "three_tier_vpc-36"
            },
            "tags_all": {
              "Name": "three_tier_vpc-36"
            }
          },
          "dependencies": [
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}